--- a/MVC_Product_Manager/MVC_Product_Manager.csproj
+++ b/MVC_Product_Manager/MVC_Product_Manager.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
